[gd_scene load_steps=9 format=3 uid="uid://dx4y80alyn6l"]

[ext_resource type="Script" path="res://Pause_layer.gd" id="1_hket6"]
[ext_resource type="Texture2D" uid="uid://c0ft1o65uc6jo" path="res://assets/Square-Light-Default/Play@4x.png" id="2_wen13"]
[ext_resource type="Texture2D" uid="uid://spy0y05fdu3u" path="res://assets/Square-Light-Default/Levels@4x.png" id="3_om42w"]
[ext_resource type="Texture2D" uid="uid://bihnvp63yi6s0" path="res://assets/Square-Light-Default/Exit@4x.png" id="4_a3yie"]
[ext_resource type="Texture2D" uid="uid://c47i7un2yrga" path="res://assets/Square-Light-Default/Repeat-Right@4x.png" id="5_qihwf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2knvu"]
bg_color = Color(0.643137, 0.490196, 0.929412, 0.690196)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yphiw"]
bg_color = Color(0.862509, 0.767123, 1, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="LabelSettings" id="LabelSettings_uv4si"]
font_size = 75
font_color = Color(0, 0.976471, 0.984314, 1)
outline_size = 4
outline_color = Color(0.545098, 0.878431, 1, 1)
shadow_size = 20
shadow_color = Color(0.489449, 0.608407, 1, 0.647059)

[node name="CanvasLayer" type="CanvasLayer"]
process_mode = 2
script = ExtResource("1_hket6")

[node name="bg1" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -296.0
offset_top = -224.0
offset_right = 296.0
offset_bottom = 96.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_2knvu")

[node name="bg2" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -276.0
offset_top = -176.0
offset_right = 276.0
offset_bottom = 72.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_yphiw")

[node name="Pause_txt" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.377604
anchor_top = 0.446354
anchor_right = 0.412028
anchor_bottom = 0.459319
offset_left = 2.5
offset_top = -182.5
offset_right = 204.453
offset_bottom = -91.9459
grow_horizontal = 2
grow_vertical = 2
text = "PAUSE"
label_settings = SubResource("LabelSettings_uv4si")
metadata/_edit_use_anchors_ = true

[node name="Play_bt" type="TextureButton" parent="."]
offset_left = 224.0
offset_top = 368.0
offset_right = 344.0
offset_bottom = 476.0
texture_normal = ExtResource("2_wen13")
ignore_texture_size = true
stretch_mode = 0

[node name="Level_bt" type="TextureButton" parent="."]
offset_left = 490.0
offset_top = 368.0
offset_right = 610.0
offset_bottom = 476.0
texture_normal = ExtResource("3_om42w")
texture_pressed = ExtResource("3_om42w")
ignore_texture_size = true
stretch_mode = 0

[node name="Exit_bt" type="TextureButton" parent="."]
offset_left = 624.0
offset_top = 368.0
offset_right = 736.0
offset_bottom = 476.0
texture_normal = ExtResource("4_a3yie")
texture_pressed = ExtResource("4_a3yie")
ignore_texture_size = true
stretch_mode = 0

[node name="RePlay_bt" type="TextureButton" parent="."]
offset_left = 358.0
offset_top = 368.0
offset_right = 478.0
offset_bottom = 476.0
texture_normal = ExtResource("5_qihwf")
texture_pressed = ExtResource("5_qihwf")
ignore_texture_size = true
stretch_mode = 0

[connection signal="pressed" from="Play_bt" to="." method="_on_play_bt_pressed"]
[connection signal="pressed" from="Level_bt" to="." method="_on_level_bt_pressed"]
[connection signal="pressed" from="Exit_bt" to="." method="_on_exit_bt_pressed"]
[connection signal="pressed" from="RePlay_bt" to="." method="_on_re_play_bt_pressed"]
